--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "baseui": "^9.73.2",
+    "baseui": "^9.85.0",
+    "gh-pages": "^3.1.0",
     "prettier": "^2.0.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
