--- a/package.json
+++ b/package.json
@@ -4,17 +4,15 @@
   "private": true,
   "homepage": "http://www.briantao.com",
   "dependencies": {
+    "@material-ui/core": "^4.11.3",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "baseui": "^9.85.0",
     "gh-pages": "^3.1.0",
     "prettier": "^2.0.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.0",
-    "styletron-engine-atomic": "^1.4.6",
-    "styletron-react": "^5.2.7"
+    "react-scripts": "^4.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
