--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Brian Tao Photography",
+  "name": "Portrait and Wedding Photography by Brian Tao",
   "icons": [
     {
       "src": "favicon.ico",
