--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "btao_website",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://www.briantao.com/",
+  "homepage": "https://www.briantaophotography.com/",
   "dependencies": {
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
