--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-final-form": "^6.5.3",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3"
   },
   "scripts": {
